examples/components/error/error-message-date.njk
{% from "components/form/controls/date-input.njk" import datoinput as datoinput %}

{{datoinput(item.label, item.hint, item.day, item.month, item.year, item.tooltip, item.tooltipTitle, item.datepicker, item.error, item.dayValue, item.monthValue, item.yearValue)}}
